@@ -8,6 +8,7 @@ import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.ME
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.US_COUNTRY_CODE;
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.US_COUNTRY_DISPLAY;
 
+import ca.uhn.fhir.repository.IRepository;
 import ca.uhn.fhir.util.BundleBuilder;
 import java.util.Collections;
 import java.util.List;
@@ -24,14 +25,13 @@ import org.hl7.fhir.dstu3.model.MeasureReport;
 import org.hl7.fhir.dstu3.model.Parameters;
 import org.hl7.fhir.dstu3.model.SearchParameter;
 import org.hl7.fhir.dstu3.model.StringType;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.cr.measure.MeasureEvaluationOptions;
 
 public class Dstu3MeasureService implements Dstu3MeasureEvaluatorSingle {
-    private final Repository repository;
+    private final IRepository repository;
     private final MeasureEvaluationOptions measureEvaluationOptions;
 
-    public Dstu3MeasureService(Repository repository, MeasureEvaluationOptions measureEvaluationOptions) {
+    public Dstu3MeasureService(IRepository repository, MeasureEvaluationOptions measureEvaluationOptions) {
         this.repository = repository;
         this.measureEvaluationOptions = measureEvaluationOptions;
     }
@@ -52,17 +52,17 @@ public class Dstu3MeasureService implements Dstu3MeasureEvaluatorSingle {
             .setDate(MEASUREREPORT_SUPPLEMENTALDATA_SEARCHPARAMETER_DEFINITION_DATE)
             .setPublisher("HL7 International - Clinical Quality Information Work Group")
             .setContact(CQI_CONTACT_DETAIL)
-            .setDescription(String.format(
-                    "Returns resources (supplemental data) from references on extensions on the MeasureReport with urls matching %s.",
-                    MEASUREREPORT_MEASURE_SUPPLEMENTALDATA_EXTENSION))
+            .setDescription(
+                    "Returns resources (supplemental data) from references on extensions on the MeasureReport with urls matching %s."
+                            .formatted(MEASUREREPORT_MEASURE_SUPPLEMENTALDATA_EXTENSION))
             .setJurisdiction(US_JURISDICTION_CODING)
             .addBase("MeasureReport")
             .setCode("supplemental-data")
             .setType(Enumerations.SearchParamType.REFERENCE)
-            .setExpression(String.format(
-                    "MeasureReport.extension('%s').value", MEASUREREPORT_MEASURE_SUPPLEMENTALDATA_EXTENSION))
-            .setXpath(String.format(
-                    "f:MeasureReport/f:extension[@url='%s'].value", MEASUREREPORT_MEASURE_SUPPLEMENTALDATA_EXTENSION))
+            .setExpression(
+                    "MeasureReport.extension('%s').value".formatted(MEASUREREPORT_MEASURE_SUPPLEMENTALDATA_EXTENSION))
+            .setXpath("f:MeasureReport/f:extension[@url='%s'].value"
+                    .formatted(MEASUREREPORT_MEASURE_SUPPLEMENTALDATA_EXTENSION))
             .setXpathUsage(SearchParameter.XPathUsageType.NORMAL)
             .setTitle("Supplemental Data")
             .setId("deqm-measurereport-supplemental-data");
