@@ -4,6 +4,7 @@ import static com.google.common.base.Preconditions.checkNotNull;
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.RESOURCE_TYPE_ORGANIZATION;
 import static org.opencds.cqf.fhir.utility.Resources.newResource;
 
+import ca.uhn.fhir.repository.IRepository;
 import ca.uhn.fhir.rest.server.exceptions.InvalidRequestException;
 import jakarta.annotation.Nullable;
 import java.time.ZonedDateTime;
@@ -21,7 +22,6 @@ import org.hl7.fhir.r4.model.Organization;
 import org.hl7.fhir.r4.model.Parameters;
 import org.hl7.fhir.r4.model.PrimitiveType;
 import org.hl7.fhir.r4.model.Resource;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.cr.measure.CareGapsProperties;
 import org.opencds.cqf.fhir.cr.measure.MeasureEvaluationOptions;
 import org.opencds.cqf.fhir.cr.measure.common.GroupDef;
@@ -41,7 +41,7 @@ import org.slf4j.LoggerFactory;
 public class R4CareGapsProcessor implements R4CareGapsProcessorInterface {
 
     private static final Logger ourLog = LoggerFactory.getLogger(R4CareGapsProcessor.class);
-    private final Repository repository;
+    private final IRepository repository;
     private final CareGapsProperties careGapsProperties;
     private final Map<String, Resource> configuredResources = new HashMap<>();
     private final R4MeasureServiceUtils r4MeasureServiceUtils;
@@ -50,7 +50,7 @@ public class R4CareGapsProcessor implements R4CareGapsProcessorInterface {
 
     public R4CareGapsProcessor(
             CareGapsProperties careGapsProperties,
-            Repository repository,
+            IRepository repository,
             MeasureEvaluationOptions measureEvaluationOptions,
             String serverBase,
             MeasurePeriodValidator measurePeriodValidator,
@@ -140,7 +140,7 @@ public class R4CareGapsProcessor implements R4CareGapsProcessorInterface {
     public List<String> getSubjects(String subject) {
         var subjects = subjectProvider.getSubjects(repository, subject).collect(Collectors.toList());
         if (!subjects.isEmpty()) {
-            ourLog.info(String.format("care-gaps report requested for: %s subjects.", subjects.size()));
+            ourLog.info("care-gaps report requested for: %s subjects.".formatted(subjects.size()));
         } else {
             ourLog.info("care-gaps report requested for: 0 subjects.");
         }
@@ -155,9 +155,8 @@ public class R4CareGapsProcessor implements R4CareGapsProcessorInterface {
         // validate resource
         checkNotNull(
                 resource,
-                String.format(
-                        "The %s Resource is configured as the %s but the Resource could not be read.",
-                        careGapsProperties.getCareGapsReporter(), key));
+                "The %s Resource is configured as the %s but the Resource could not be read."
+                        .formatted(careGapsProperties.getCareGapsReporter(), key));
 
         // add resource to configured resources
         configuredResources.put(key, resource);
@@ -187,9 +186,9 @@ public class R4CareGapsProcessor implements R4CareGapsProcessorInterface {
                     && !CareGapsStatusCode.OPEN_GAP.toString().equals(status)
                     && !CareGapsStatusCode.NOT_APPLICABLE.toString().equals(status)
                     && !CareGapsStatusCode.PROSPECTIVE_GAP.toString().equals(status)) {
-                throw new InvalidRequestException(String.format(
-                        "CareGap status parameter: %s, is not an accepted value for Measure: %s",
-                        status, printEithers(measure)));
+                throw new InvalidRequestException(
+                        "CareGap status parameter: %s, is not an accepted value for Measure: %s"
+                                .formatted(status, printEithers(measure)));
             }
         }
     }
@@ -206,7 +205,7 @@ public class R4CareGapsProcessor implements R4CareGapsProcessorInterface {
 
     @Override
     public void checkMeasureBasis(Measure measure) {
-        var msg = String.format("CareGaps can't process Measure: %s, it is not Boolean basis.", measure.getIdPart());
+        var msg = "CareGaps can't process Measure: %s, it is not Boolean basis.".formatted(measure.getIdPart());
         R4MeasureDefBuilder measureDefBuilder = new R4MeasureDefBuilder();
         var measureDef = measureDefBuilder.build(measure);
 
@@ -243,9 +242,9 @@ public class R4CareGapsProcessor implements R4CareGapsProcessorInterface {
         for (MeasureScoring measureScoringType : scoringTypes) {
             if (!MeasureScoring.PROPORTION.equals(measureScoringType)
                     && !MeasureScoring.RATIO.equals(measureScoringType)) {
-                throw new InvalidRequestException(String.format(
-                        "MeasureScoring type: %s, is not an accepted Type for care-gaps service for Measure: %s",
-                        measureScoringType.getDisplay(), measure.getUrl()));
+                throw new InvalidRequestException(
+                        "MeasureScoring type: %s, is not an accepted Type for care-gaps service for Measure: %s"
+                                .formatted(measureScoringType.getDisplay(), measure.getUrl()));
             }
         }
     }
