@@ -1,6 +1,7 @@
 package org.opencds.cqf.fhir.cr.visitor.r4;
 
 import ca.uhn.fhir.model.api.IQueryParameterType;
+import ca.uhn.fhir.repository.IRepository;
 import ca.uhn.fhir.rest.param.ReferenceParam;
 import ca.uhn.fhir.rest.server.exceptions.UnprocessableEntityException;
 import java.util.ArrayList;
@@ -15,6 +16,8 @@ import org.hl7.fhir.instance.model.api.IPrimitiveType;
 import org.hl7.fhir.r4.model.Basic;
 import org.hl7.fhir.r4.model.Bundle;
 import org.hl7.fhir.r4.model.Bundle.BundleEntryComponent;
+import org.hl7.fhir.r4.model.CanonicalType;
+import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.Extension;
 import org.hl7.fhir.r4.model.Library;
 import org.hl7.fhir.r4.model.Measure;
@@ -24,7 +27,6 @@ import org.hl7.fhir.r4.model.Reference;
 import org.hl7.fhir.r4.model.ResourceType;
 import org.hl7.fhir.r4.model.StringType;
 import org.hl7.fhir.r4.model.ValueSet;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.cr.visitor.r4.CRMIReleaseExperimentalBehavior.CRMIReleaseExperimentalBehaviorCodes;
 import org.opencds.cqf.fhir.cr.visitor.r4.CRMIReleaseVersionBehavior.CRMIReleaseVersionBehaviorCodes;
 import org.opencds.cqf.fhir.utility.Constants;
@@ -41,14 +43,14 @@ public class ReleaseVisitor {
     public static void checkNonExperimental(
             MetadataResource resource,
             CRMIReleaseExperimentalBehaviorCodes experimentalBehavior,
-            Repository repository,
+            IRepository repository,
             Logger log)
             throws UnprocessableEntityException {
         if (CRMIReleaseExperimentalBehaviorCodes.NULL != experimentalBehavior
                 && CRMIReleaseExperimentalBehaviorCodes.NONE != experimentalBehavior) {
-            String nonExperimentalError = String.format(
-                    "Root artifact is not Experimental, but references an Experimental resource with URL '%s'.",
-                    resource.getUrl());
+            String nonExperimentalError =
+                    "Root artifact is not Experimental, but references an Experimental resource with URL '%s'."
+                            .formatted(resource.getUrl());
             if (CRMIReleaseExperimentalBehaviorCodes.WARN == experimentalBehavior && resource.getExperimental()) {
                 log.warn(nonExperimentalError);
             } else if (CRMIReleaseExperimentalBehaviorCodes.ERROR == experimentalBehavior
@@ -94,7 +96,7 @@ public class ReleaseVisitor {
         }
     }
 
-    public static Bundle searchArtifactAssessmentForArtifact(IIdType reference, Repository repository) {
+    public static Bundle searchArtifactAssessmentForArtifact(IIdType reference, IRepository repository) {
         Map<String, List<IQueryParameterType>> searchParams = new HashMap<>();
         List<IQueryParameterType> urlList = new ArrayList<>();
         urlList.add(new ReferenceParam(reference.getResourceType() + "/" + reference.getIdPart()));
@@ -123,9 +125,9 @@ public class ReleaseVisitor {
                 releaseVersion = Optional.ofNullable(version);
             } else if (CRMIReleaseVersionBehaviorCodes.CHECK == versionBehaviorCode
                     && !replaceDraftInExisting.equals(version)) {
-                throw new UnprocessableEntityException(String.format(
-                        "versionBehavior specified is 'check' and the version provided ('%s') does not match the version currently specified on the root artifact ('%s').",
-                        version, existingVersion));
+                throw new UnprocessableEntityException(
+                        "versionBehavior specified is 'check' and the version provided ('%s') does not match the version currently specified on the root artifact ('%s')."
+                                .formatted(version, existingVersion));
             }
         }
         return releaseVersion;
@@ -133,7 +135,7 @@ public class ReleaseVisitor {
 
     @SuppressWarnings("squid:S1612")
     public static List<BundleEntryComponent> findArtifactCommentsToUpdate(
-            MetadataResource rootArtifact, String releaseVersion, Repository repository) {
+            MetadataResource rootArtifact, String releaseVersion, IRepository repository) {
         List<BundleEntryComponent> returnEntries = new ArrayList<>();
         // find any artifact assessments and update those as part of the bundle
         searchArtifactAssessmentForArtifact(rootArtifact.getIdElement(), repository).getEntry().stream()
@@ -155,7 +157,7 @@ public class ReleaseVisitor {
                 })
                 .forEach(artifactComment -> {
                     artifactComment.setDerivedFromContentRelatedArtifact(
-                            String.format("%s|%s", rootArtifact.getUrl(), releaseVersion));
+                            "%s|%s".formatted(rootArtifact.getUrl(), releaseVersion));
                     returnEntries.add((BundleEntryComponent) PackageHelper.createEntry(artifactComment, true));
                 });
         return returnEntries;
@@ -163,16 +165,48 @@ public class ReleaseVisitor {
 
     public static void extractDirectReferenceCodes(IKnowledgeArtifactAdapter rootAdapter, Measure measure) {
         Optional<Extension> effectiveDataRequirementsExt = measure.getExtension().stream()
-                .filter(ext -> ext.getUrl().equals(Constants.CQFM_EFFECTIVE_DATA_REQUIREMENTS))
+                .filter(ext -> ext.getUrl().equals(Constants.CQFM_EFFECTIVE_DATA_REQUIREMENTS)
+                        || ext.getUrl().equals(Constants.CRMI_EFFECTIVE_DATA_REQUIREMENTS))
                 .findFirst();
         if (effectiveDataRequirementsExt.isPresent()) {
-            Reference ref = (Reference) effectiveDataRequirementsExt.get().getValue();
-            Library effectiveDataRequirementsLib = (Library) measure.getContained("#" + ref.getReference());
+            Library effectiveDataRequirementsLib = null;
+            if (effectiveDataRequirementsExt.get().getValue() instanceof Reference ref) {
+                effectiveDataRequirementsLib = (Library) measure.getContained(ref.getReference());
+            } else if (effectiveDataRequirementsExt.get().getValue() instanceof CanonicalType canonicalType) {
+                effectiveDataRequirementsLib = (Library) measure.getContained(canonicalType.asStringValue());
+            }
+
             if (effectiveDataRequirementsLib != null) {
-                effectiveDataRequirementsLib.getExtension().stream()
+                var proposedExtensions = effectiveDataRequirementsLib.getExtension().stream()
                         .filter(ext -> ext.getUrl().equals(Constants.CQFM_DIRECT_REFERENCE_EXTENSION))
                         .map(ext -> ext.setUrl(Constants.CQF_DIRECT_REFERENCE_EXTENSION))
-                        .forEach(rootAdapter::addExtension);
+                        .toList();
+
+                var existingRootAdapterExtensions = rootAdapter.getExtension().stream()
+                        .filter(ext -> ext.getUrl().equals(Constants.CQFM_DIRECT_REFERENCE_EXTENSION)
+                                || ext.getUrl().equals(Constants.CQF_DIRECT_REFERENCE_EXTENSION))
+                        .toList();
+
+                for (var proposedExt : proposedExtensions) {
+                    boolean shouldAddExtension = true;
+                    Coding proposedCoding = (Coding) proposedExt.getValue();
+                    for (var existingExt : existingRootAdapterExtensions) {
+                        Coding existingCoding = (Coding) existingExt.getValue();
+                        boolean systemMatches = proposedCoding.getSystem().equals(existingCoding.getSystem());
+                        boolean codeMatches = proposedCoding.getCode().equals(existingCoding.getCode());
+                        boolean versionMatches = proposedCoding.getVersion() == null
+                                || proposedCoding.getVersion().equals(existingCoding.getVersion());
+
+                        if (systemMatches && codeMatches && versionMatches) {
+                            shouldAddExtension = false;
+                            break;
+                        }
+                    }
+
+                    if (shouldAddExtension) {
+                        rootAdapter.addExtension(proposedExt);
+                    }
+                }
             }
         }
     }
