@@ -16,6 +16,8 @@ import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.SD
 import static org.opencds.cqf.fhir.test.Resources.getResourcePath;
 
 import ca.uhn.fhir.context.FhirContext;
+import ca.uhn.fhir.repository.IRepository;
+import java.nio.file.Path;
 import jakarta.annotation.Nonnull;
 import java.nio.file.Paths;
 import java.time.LocalDate;
@@ -54,7 +56,6 @@ import org.hl7.fhir.r4.model.Reference;
 import org.hl7.fhir.r4.model.Resource;
 import org.hl7.fhir.r4.model.ResourceType;
 import org.hl7.fhir.r4.model.StringType;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.cql.engine.retrieve.RetrieveSettings.SEARCH_FILTER_MODE;
 import org.opencds.cqf.fhir.cql.engine.retrieve.RetrieveSettings.TERMINOLOGY_FILTER_MODE;
 import org.opencds.cqf.fhir.cql.engine.terminology.TerminologySettings.VALUESET_EXPANSION_MODE;
@@ -113,19 +114,31 @@ public class Measure {
         }
     }
 
+    public static Given given(@Nullable Boolean applyScoringSetMembership) {
+        return new Given(applyScoringSetMembership);
+    }
+
     public static Given given() {
-        return new Given();
+        return new Given(true);
     }
 
     public static class Given {
-        private Repository repository;
+        private IRepository repository;
         private MeasureEvaluationOptions evaluationOptions;
         private final MeasurePeriodValidator measurePeriodValidator;
         private final R4MeasureServiceUtils measureServiceUtils;
         private NpmPackageLoader npmPackageLoader;
 
-        public Given() {
+        public Given(@Nullable Boolean applyScoringSetMembership) {
             this.evaluationOptions = MeasureEvaluationOptions.defaultOptions();
+            if (applyScoringSetMembership != null && !applyScoringSetMembership) {
+                MeasureEvaluationOptions options = MeasureEvaluationOptions.defaultOptions();
+                options.setApplyScoringSetMembership(false);
+                this.evaluationOptions = options;
+            } else {
+                this.evaluationOptions = MeasureEvaluationOptions.defaultOptions();
+            }
+
             this.evaluationOptions
                     .getEvaluationSettings()
                     .getRetrieveSettings()
@@ -144,7 +157,7 @@ public class Measure {
             this.npmPackageLoader = NpmPackageLoader.DEFAULT;
         }
 
-        public Given repository(Repository repository) {
+        public Given repository(IRepository repository) {
             this.repository = repository;
             return this;
         }
@@ -158,7 +171,7 @@ public class Measure {
         public Given repositoryFor(String repositoryPath) {
             this.repository = new IgRepository(
                     FhirContext.forR4Cached(),
-                    Paths.get(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
+                    Path.of(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
 
             return this;
         }
@@ -168,7 +181,7 @@ public class Measure {
             return this;
         }
 
-        public Repository getRepository() {
+        public IRepository getRepository() {
             return repository;
         }
 
@@ -441,9 +454,8 @@ public class Measure {
             assertEquals(
                     periodStart,
                     period.getStart(),
-                    String.format(
-                            "Expected period start of %s but was: %s",
-                            formatDate(periodStart), formatDate(period.getStart())));
+                    "Expected period start of %s but was: %s"
+                            .formatted(formatDate(periodStart), formatDate(period.getStart())));
             return this;
         }
 
@@ -452,9 +464,8 @@ public class Measure {
             assertEquals(
                     periodEnd,
                     period.getEnd(),
-                    String.format(
-                            "Expected period start of %s but was: %s",
-                            formatDate(periodEnd), formatDate(period.getEnd())));
+                    "Expected period start of %s but was: %s"
+                            .formatted(formatDate(periodEnd), formatDate(period.getEnd())));
             return this;
         }
 
@@ -845,6 +856,11 @@ public class Measure {
             return this;
         }
 
+        public SelectedGroup hasMeasureScore(boolean hasScore) {
+            assertEquals(hasScore, this.value().hasMeasureScore());
+            return this;
+        }
+
         public SelectedGroup hasImprovementNotationExt(String code) {
             var improvementNotationExt = value().getExtensionByUrl(MEASUREREPORT_IMPROVEMENT_NOTATION_EXTENSION);
             assertNotNull(improvementNotationExt);
@@ -943,7 +959,7 @@ public class Measure {
                 var ex = this.value().getExtensionsByUrl(EXT_CRITERIA_REFERENCE_URL);
                 if (ex.isEmpty()) {
                     throw new IllegalStateException(
-                            String.format("no evaluated resource extensions were found, and expected %s", extValueRef));
+                            "no evaluated resource extensions were found, and expected %s".formatted(extValueRef));
                 }
                 String foundRef = null;
                 for (Extension extension : ex) {
@@ -962,8 +978,8 @@ public class Measure {
             public SelectedReference hasPopulations(String... population) {
                 var ex = this.value().getExtensionsByUrl(EXT_CRITERIA_REFERENCE_URL);
                 if (ex.isEmpty()) {
-                    throw new IllegalStateException(String.format(
-                            "no evaluated resource extensions were found, and expected %s", population.length));
+                    throw new IllegalStateException("no evaluated resource extensions were found, and expected %s"
+                            .formatted(population.length));
                 }
 
                 @SuppressWarnings("unchecked")
@@ -974,9 +990,8 @@ public class Measure {
                 for (var p : population) {
                     assertTrue(
                             set.contains(p),
-                            String.format(
-                                    "population: %s was not found in the evaluated resources criteria reference extension list",
-                                    p));
+                            "population: %s was not found in the evaluated resources criteria reference extension list"
+                                    .formatted(p));
                 }
 
                 return this;
