@@ -7,7 +7,8 @@ import static org.opencds.cqf.fhir.test.Resources.getResourcePath;
 
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.parser.IParser;
-import java.nio.file.Paths;
+import ca.uhn.fhir.repository.IRepository;
+import java.nio.file.Path;
 import java.time.LocalDate;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
@@ -36,7 +37,6 @@ import org.hl7.fhir.r4.model.Parameters;
 import org.hl7.fhir.r4.model.Reference;
 import org.hl7.fhir.r4.model.Resource;
 import org.hl7.fhir.r4.model.ResourceType;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.cql.engine.retrieve.RetrieveSettings.SEARCH_FILTER_MODE;
 import org.opencds.cqf.fhir.cql.engine.retrieve.RetrieveSettings.TERMINOLOGY_FILTER_MODE;
 import org.opencds.cqf.fhir.cql.engine.terminology.TerminologySettings.VALUESET_EXPANSION_MODE;
@@ -93,7 +93,7 @@ class MultiMeasure {
     }
 
     public static class Given {
-        private Repository repository;
+        private IRepository repository;
         private MeasureEvaluationOptions evaluationOptions;
         private String serverBase;
         private MeasurePeriodValidator measurePeriodValidator;
@@ -119,7 +119,7 @@ class MultiMeasure {
             this.npmPackageLoader = NpmPackageLoader.DEFAULT;
         }
 
-        public MultiMeasure.Given repository(Repository repository) {
+        public MultiMeasure.Given repository(IRepository repository) {
             this.repository = repository;
             return this;
         }
@@ -127,7 +127,7 @@ class MultiMeasure {
         public MultiMeasure.Given repositoryFor(String repositoryPath) {
             this.repository = new IgRepository(
                     FhirContext.forR4Cached(),
-                    Paths.get(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
+                    Path.of(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
             return this;
         }
 
@@ -278,8 +278,8 @@ class MultiMeasure {
                     .map(t -> (MeasureReport) t.getResource())
                     .filter(x -> x.getMeasure().equals(measureUrl))
                     .toList();
-            var msg = String.format(
-                    "measureReport count: %s, does not match for measure url: %s", reports.size(), measureUrl);
+            var msg =
+                    "measureReport count: %s, does not match for measure url: %s".formatted(reports.size(), measureUrl);
             assertEquals(count, reports.size(), msg);
 
             return this;
@@ -517,8 +517,8 @@ class MultiMeasure {
         public SelectedReference<P> hasPopulations(String... population) {
             var ex = this.value().getExtensionsByUrl(MeasureConstants.EXT_CRITERIA_REFERENCE_URL);
             if (ex.isEmpty()) {
-                throw new IllegalStateException(String.format(
-                        "no evaluated resource extensions were found, and expected %s", population.length));
+                throw new IllegalStateException(
+                        "no evaluated resource extensions were found, and expected %s".formatted(population.length));
             }
 
             @SuppressWarnings("unchecked")
@@ -529,9 +529,8 @@ class MultiMeasure {
             for (var p : population) {
                 assertTrue(
                         set.contains(p),
-                        String.format(
-                                "population: %s was not found in the evaluated resources criteria reference extension list",
-                                p));
+                        "population: %s was not found in the evaluated resources criteria reference extension list"
+                                .formatted(p));
             }
 
             return this;
