@@ -2,9 +2,11 @@ package org.opencds.cqf.fhir.utility.repository;
 
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.model.api.IQueryParameterType;
+import ca.uhn.fhir.repository.IRepository;
 import ca.uhn.fhir.rest.api.MethodOutcome;
 import ca.uhn.fhir.rest.server.exceptions.ResourceNotFoundException;
 import ca.uhn.fhir.util.BundleBuilder;
+import com.google.common.collect.Multimap;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -15,15 +17,14 @@ import org.hl7.fhir.instance.model.api.IBaseConformance;
 import org.hl7.fhir.instance.model.api.IBaseParameters;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.instance.model.api.IIdType;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.utility.iterable.BundleIterator;
 
 // wip
-public class FederatedRepository implements Repository {
-    private Repository local;
-    private List<Repository> repositoryList;
+public class FederatedRepository implements IRepository {
+    private IRepository local;
+    private List<IRepository> repositoryList;
 
-    public FederatedRepository(Repository local, Repository... repositories) {
+    public FederatedRepository(IRepository local, IRepository... repositories) {
         this.local = local;
         repositoryList = Arrays.asList(repositories);
     }
@@ -56,7 +57,7 @@ public class FederatedRepository implements Repository {
         }
 
         if (result == null) {
-            throw new ResourceNotFoundException(String.format("No resource found with id: %s", id.getValue()));
+            throw new ResourceNotFoundException("No resource found with id: %s".formatted(id.getValue()));
         }
 
         return (T) result;
@@ -86,10 +87,10 @@ public class FederatedRepository implements Repository {
 
     @SuppressWarnings("unchecked")
     private <B extends IBaseBundle, T extends IBaseResource> List<T> conductSearch(
-            Repository repository,
+            IRepository repository,
             Class<B> bundleType,
             Class<T> resourceType,
-            Map<String, List<IQueryParameterType>> searchParameters,
+            Multimap<String, List<IQueryParameterType>> searchParameters,
             Map<String, String> headers) {
         List<T> results = new ArrayList<>();
         var bundle = repository.search(bundleType, resourceType, searchParameters, headers);
@@ -102,7 +103,7 @@ public class FederatedRepository implements Repository {
     public <B extends IBaseBundle, T extends IBaseResource> B search(
             Class<B> bundleType,
             Class<T> resourceType,
-            Map<String, List<IQueryParameterType>> searchParameters,
+            Multimap<String, List<IQueryParameterType>> searchParameters,
             Map<String, String> headers) {
         // Search all repositories and return combined results.
         var builder = new BundleBuilder(fhirContext());
